 * Extracting certificate transparency SCT (the signature from CT logs) from a staged
   certificate and displaying these on /.httpd/certificate-status. A monitoring client 
   may use this to verify the signatures against the CT logs, even though the log may not
   yet show the certificate (maximum merge delay seems to be at 24 hours on most logs). 

v2.0.2
----------------------------------------------------------------------------------------------------
 * Fixing configuration startup (e.g. dry run) to sync with the store again. This let's
   us find renamed MDs and use its correct paths. With wrong paths, mod_ssl gets unhappy
   and logs errors (see #125).
 * Adding an experimental "check" column to server-status with links to known certificate
   checker sites.
 * Certificate validity now appears as "valid-from"/"valid-until" pair.
 * Adding SHA256 fingerprint to certificate-status for renewed certificate.
 * md-status handler fixed to work on nested path locations as well.

v2.0.1
----------------------------------------------------------------------------------------------------
 * New handler "md-status" that can be configured to return the state of all MDs in JSON format.
 * Append the name or domain of an MD to the "md-status" url path and get the JSON of just
   that MD.

v2.0.0
----------------------------------------------------------------------------------------------------
 * Updating the documentation by pulling the wiki into README.md and making the necessary
   additions and edits.
 * If a MDomain is removed, all its challenge store information is purged as well. Test
   case for that added. Fixes #93
 * The ACMEv2 endpoint of Let's Encrypt is now the default for new MDs. Existing MDs will keep
   their values unless one explicitly configures a 'MDCertificateAuthority'. 
 * Non-HTML format of mod_status now lists number of ok/renew/error/ready MDomains.

v1.99.12